--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 VITE_USE_MOCK = true
 
 # public path
-VITE_PUBLIC_PATH = /
+VITE_PUBLIC_PATH = /pm/
 
 # Basic interface address SPA
 VITE_GLOB_API_URL=/basic-api
