--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
 VITE_USE_MOCK = false
 
 # public path
-VITE_PUBLIC_PATH = /
+VITE_PUBLIC_PATH = /pm/
 
 # Whether to enable gzip or brotli compression
 # Optional: gzip | brotli | none
