--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "echarts": "^5.4.2",
     "exceljs": "^4.3.0",
     "intro.js": "^7.0.1",
+    "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
