--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,8 @@ VITE_USE_MOCK = false
 VITE_PUBLIC_PATH = /pm/
 
 # Basic interface address SPA
-VITE_GLOB_API_URL=/basic-api
+# VITE_GLOB_API_URL=http://www.beyond-it-service.com/usercenter # 测试
+VITE_GLOB_API_URL=https://map.beyond-itcenter.com/usercenter # 开发
 
 # File upload address， optional
 VITE_GLOB_UPLOAD_URL=/upload
