--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "@types/codemirror": "^5.60.7",
     "@types/crypto-js": "^4.1.1",
     "@types/intro.js": "^5.1.1",
+    "@types/js-cookie": "^3.0.3",
     "@types/lodash-es": "^4.17.7",
     "@types/mockjs": "^1.0.7",
     "@types/nprogress": "^0.2.0",
