--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
 VITE_USE_MOCK = false
 
 # public path
-VITE_PUBLIC_PATH = /pm/
+VITE_PUBLIC_PATH = /
 
 # Whether to enable gzip or brotli compression
 # Optional: gzip | brotli | none
@@ -11,7 +11,8 @@ VITE_BUILD_COMPRESS = 'gzip'
 
 
 # Basic interface address SPA
-VITE_GLOB_API_URL=http://www.beyond-it-service.com/usercenter  #测试
+VITE_GLOB_API_URL=https://map.beyond-itcenter.com/usercenter # 开发
+# VITE_GLOB_API_URL=http://www.beyond-it-service.com/usercenter  #测试
 # VITE_GLOB_API_URL=https://shop.beyond-itservice.com/usercenter #正式
 
 # File upload address， optional
