--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 VITE_USE_MOCK = false
 
 # public path
-VITE_PUBLIC_PATH = /pm/
+VITE_PUBLIC_PATH = /
 
 # Basic interface address SPA
 # VITE_GLOB_API_URL=http://www.beyond-it-service.com/usercenter # 测试
