--- a/.env.development
+++ b/.env.development
@@ -6,8 +6,8 @@ VITE_PUBLIC_PATH = /
 
 # Basic interface address SPA
 # VITE_GLOB_API_URL=http://www.beyond-it-service.com/usercenter # 测试
-VITE_GLOB_API_URL=https://map.beyond-itcenter.com/usercenter # 开发
-#VITE_GLOB_API_URL=https://shop.beyond-itservice.com/usercenter #正式
+# VITE_GLOB_API_URL=https://map.beyond-itcenter.com/usercenter # 开发
+VITE_GLOB_API_URL=https://shop.beyond-itservice.com/usercenter #正式
 # VITE_GLOB_API_URL=/basic-api # 开发
 # File upload address， optional
 VITE_GLOB_UPLOAD_URL=/upload
