--- a/.env.production
+++ b/.env.production
@@ -12,8 +12,8 @@ VITE_BUILD_COMPRESS = 'gzip'
 
 # Basic interface address SPA
 # VITE_GLOB_API_URL=https://map.beyond-itcenter.com/usercenter # 开发
-# VITE_GLOB_API_URL=http://www.beyond-it-service.com/usercenter  #测试
-VITE_GLOB_API_URL=https://shop.beyond-itservice.com/usercenter #正式
+VITE_GLOB_API_URL=http://www.beyond-it-service.com/usercenter  #测试
+# VITE_GLOB_API_URL=https://shop.beyond-itservice.com/usercenter #正式
 
 # File upload address， optional
 # It can be forwarded by nginx or write the actual address directly
